--- a/Microsoft-Learn/Blazor/Components/App.razor
+++ b/Microsoft-Learn/Blazor/Components/App.razor
@@ -7,7 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="Build web apps with Blazor.styles.css" />
+    <link rel="stylesheet" href="Blazor.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
